--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,9 @@ p{
     font-family: var(--Barlow);
     
 }
+html,body{
+    overflow-x: hidden;
+}
 .container{
     width: 1285px;
     margin: auto;
@@ -49,6 +52,7 @@ header h2{
     color: var(--gray);
     
 }
+
 /* navigation css start */
 /* navigation css start*/
 nav{
@@ -214,7 +218,6 @@ nav .navigation input[type=search]{
   }
   .decorate-content .dect-box .swiper-slide .text{
     width: 100%;
-    /* height: 35px; */
     background: var(--gray);
     color: var(--white);
     font-size: 9px;
@@ -662,7 +665,7 @@ nav .navigation input[type=search]{
     right: -349px;
 }
 #discount .disc-row .disc-text{
-    flex-basis: 405px;
+    flex-basis: 45%;
     align-self: flex-end;
     display: flex;
     color: var(--yelow);
@@ -670,13 +673,13 @@ nav .navigation input[type=search]{
 }
 #discount .disc-row .disc-text h2{
     font-family: var(--Baskervville);
-    font-size: 185.02px;
+    font-size: 125.02px;
     font-weight: 400;
 
 }
 #discount .disc-row .disc-text h3{
     font-family: var(--Baskervville);
-    font-size: 64.13px;
+    font-size: 44.13px;
     font-weight: 400;
     line-height: 60px;
 }
@@ -684,7 +687,7 @@ nav .navigation input[type=search]{
 /****************** footer css  start *******************/
 footer{
     width: 100%;
-    padding: 65px 0;
+    padding: 65px 0 0;
 
 }
 footer .foot-content{
